iOS send binary attachment
